fix(web): main glow overflow fix

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -127,8 +127,8 @@
     mask-image: linear-gradient(to left, transparent 15%, black 100%);
   }
 
-  .min-h-dvh-minus-209 {
-    min-height: calc(100vh - 209px);
+  .min-h-dvh-minus-191 {
+    min-height: calc(100vh - 191px);
   }
 }
 
